src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
	--color-primary: #00a3ff;
	--color-primary-100: #aae0ff;
	--color-primary-200: #7fd1ff;
	--color-primary-300: #55c1ff;
	--color-primary-400: #2ab2ff;
	--color-primary-500: #00a3ff;
	--color-primary-600: #0087d4;
	--color-primary-700: #006caa;
	--color-primary-800: #00517f;
	--color-primary-900: #003655;
	--color-primary-1000: #001b2a;

	--color-secondary: #f77901;

	--color-default-text: #ffffff;
	--color-default-text-strong: #dedede;
	--color-placeholder: #1d1c24;

	--color-section-background: #121721;
	--color-background: #12111a;
	--color-background-light: #20232d;
	--color-contrast: #fff;

	--shadow-grand: 0px 30px 30px 0px rgba(0, 0, 0, 0.04), 0px 70px 65px 0px rgba(0, 0, 0, 0.05),
		0px 10px 8px 0px rgba(0, 0, 0, 0.03), 0px 15px 15px 0px rgba(0, 0, 0, 0.03),
		0px 0px 1px 0px rgba(0, 0, 0, 0.07), 0px 2px 2px 0px rgba(0, 0, 0, 0.01),
		0px 4px 4px 0px rgba(0, 0, 0, 0.02);

	--shadow-minor: 0px 8px 20px 0px rgba(0, 0, 0, 0.06);
}

html {
	scroll-behavior: smooth;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
}
/*Scrollbar*/
::-webkit-scrollbar {
	width: 4px;
}
::-webkit-scrollbar-track {
	background: #00000000;
}
::-webkit-scrollbar-thumb {
	background: #d4d4d4;
	border-radius: 3px;
}
::-webkit-scrollbar-thumb:hover {
	background: #00000000;
}

@layer utilities {
	.text-balance {
		text-wrap: balance;
	}
}

